# GCIS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
benchmark/: CMakeLists.txt  benchmark_main.cpp
dataset/: repetitive-corpus.txt
experiments/: pizza-chili-HP.ods
include/: divsufsort-lcp.h  eliasfano.hpp  gc-is.hpp  gcis.hpp  gcis_eliasfano.hpp  gcis_eliasfano_codec.hpp  gcis_eliasfano_codec_no_lcp.hpp  gcis_eliasfano_index.hpp  gcis_eliasfano_no_lcp.hpp  gcis_gap.hpp  gcis_gap_codec.hpp  gcis_index.hpp  gcis_index_bs.hpp  gcis_index_dfuds.hpp  gcis_index_grid.hpp  gcis_s8b.hpp  gcis_s8b_codec.hpp  gcis_unary.hpp  gcis_unary_codec.hpp  grammar_builder.hpp  index_builder.hpp  sais.h  sais_nong.hpp  simple8b.hpp  util.hpp
lib/: CMakeLists.txt  eliasfano.cpp  gcis_eliasfano_codec.cpp  gcis_eliasfano_codec_no_lcp.cpp  gcis_gap_codec.cpp  gcis_s8b_codec.cpp  gcis_unary_codec.cpp  sais_nong.cpp  simple8b.cpp  util.cpp
scripts/: email_notification.py  extract.py  gcis.py  generate_extract_input.py  generate_graphs.py  get-report.py  get-saca-data.py  get_extract_data.py  gz.py  memory2plot.py  plot-grammar-compare.py  plot-memory-footprint.R  plot_decode_saca.py  plot_extract.py  repair.py  report2csv.py  results2plot.py  run-decode-saca.py  run_experiments.py  run_extract.py  run_locate_self_index.py  run_repair_sc.py  run_repair_sn.py  runall.py  sais.py  sevenz.py  statistics2plot.py
src/: CMakeLists.txt  decode-divsufsort-lcp.cpp  decode-divsufsort.cpp  decode-sais-lcp-yuta.cpp  decode-sais-nong.cpp  decode-sais-yuta.cpp  divsufsort-lcp.cpp  divsufsort.cpp  gc-is-codec.cpp  gcis-extract.cpp  gcis_lyndon.cpp  sais-lcp-yuta.cpp  sais-nong.cpp  sais-yuta.cpp  sais.cpp  test-gcis-elias-fano.cpp
test/: CMakeLists.txt  test_eliasfano.cpp  test_gcis_index.cpp  test_gcis_index_bs.cpp  test_gcis_index_grid.cpp  test_main.cpp  test_simple8b.cpp
